Simplify ensureProperties by letting Splitter handle trailing newlines
Remove explicit endsWithNewline tracking — the trailing empty string
from Splitter naturally preserves trailing newlines through the join.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>